Move model to assets

--- a/jupyterNotebooks/PDIoT_lab3_daily_activities.ipynb
+++ b/jupyterNotebooks/PDIoT_lab3_daily_activities.ipynb
@@ -1374,28 +1374,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 868,
+   "execution_count": 870,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\nikit\\AppData\\Local\\Temp\\tmpxl8bjtd_\\assets\n"
+      "INFO:tensorflow:Assets written to: C:\\Users\\nikit\\AppData\\Local\\Temp\\tmp47o_1i29\\assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\nikit\\AppData\\Local\\Temp\\tmpxl8bjtd_\\assets\n"
+      "INFO:tensorflow:Assets written to: C:\\Users\\nikit\\AppData\\Local\\Temp\\tmp47o_1i29\\assets\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved artifact at 'C:\\Users\\nikit\\AppData\\Local\\Temp\\tmpxl8bjtd_'. The following endpoints are available:\n",
+      "Saved artifact at 'C:\\Users\\nikit\\AppData\\Local\\Temp\\tmp47o_1i29'. The following endpoints are available:\n",
       "\n",
       "* Endpoint 'serve'\n",
       "  args_0 (POSITIONAL_ONLY): List[TensorSpec(shape=(None, 100, 3), dtype=tf.float32, name='respeck_input'), TensorSpec(shape=(None, 100, 3), dtype=tf.float32, name='thingy_input')]\n",
@@ -1436,7 +1436,7 @@
       "  2146008616448: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
       "  2146008618384: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
       "  2146008619616: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
-      "Model successfully exported to c:\\Users\\nikit\\Documents\\University\\Year4\\PDIOT\\CW3\\pdiotapp\\models\\activities_model.tflite\n"
+      "Model successfully exported to c:\\Users\\nikit\\Documents\\University\\Year4\\PDIOT\\CW3\\pdiotapp\\app\\src\\main\\assets\\activities_model.tflite\n"
      ]
     }
    ],
@@ -1447,9 +1447,8 @@
     "    tflite_model = converter.convert()\n",
     "\n",
     "    # Specify the path where the .tflite model should be saved\n",
-    "    # tflite_model_path = 'C:/Users/nikit/Documents/University/Year4/PDIOT/CW3/models/activities_model.tflite'\n",
     "    # Specify the relative path for saving the .tflite model\n",
-    "    tflite_model_path = os.path.join(repo_path, \"models\", \"activities_model.tflite\")\n",
+    "    tflite_model_path = os.path.join(repo_path, \"app\", \"src\", \"main\", \"assets\", \"activities_model.tflite\")\n",
     "\n",
     "    # Save the converted model to the specified .tflite file\n",
     "    with open(tflite_model_path, 'wb') as f:\n",
