Add per class accuracy on K-fold

--- a/jupyterNotebooks/PDIoT_lab3_daily_activities.ipynb
+++ b/jupyterNotebooks/PDIoT_lab3_daily_activities.ipynb
@@ -1516,7 +1516,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5-fold cross validation"
+    "5-fold cross validation:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following code uses a strict metric called F1-score."
    ]
   },
   {
@@ -1672,6 +1679,107 @@
     "\n",
     "# print(\"Average metrics on original test set:\")\n",
     "# print(average_test_metrics)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following code uses per class accuracy for k-fold cross validation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nikit\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\keras\\src\\models\\functional.py:225: UserWarning: The structure of `inputs` doesn't match the expected structure: ['respeck_input', 'thingy_input']. Received: the structure of inputs=('*', '*')\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m117/117\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 6ms/step\n",
+      "\u001b[1m117/117\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 7ms/step\n",
+      "\u001b[1m117/117\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 7ms/step\n",
+      "\u001b[1m117/117\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 6ms/step\n",
+      "\u001b[1m117/117\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step\n",
+      "Average per-class accuracy over k-fold:\n",
+      "Class 0: 0.9931\n",
+      "Class 1: 0.9950\n",
+      "Class 2: 0.9929\n",
+      "Class 3: 0.9937\n",
+      "Class 4: 0.9957\n",
+      "Class 5: 0.9758\n",
+      "Class 6: 0.9867\n",
+      "Class 7: 0.9954\n",
+      "Class 8: 0.9793\n",
+      "Class 9: 0.9874\n",
+      "Class 10: 0.9871\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import KFold\n",
+    "import numpy as np\n",
+    "\n",
+    "# Combine all training data for K-Fold\n",
+    "X_combined_respeck = X_train_respeck\n",
+    "X_combined_thingy = X_train_thingy\n",
+    "y_combined_one_hot = y_train_respeck_one_hot\n",
+    "\n",
+    "# Initialize K-Fold\n",
+    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "# Store per-class accuracy for each fold\n",
+    "fold_accuracies = []\n",
+    "\n",
+    "for train_index, val_index in kf.split(X_combined_respeck):\n",
+    "    # Split training data into train and validation sets for this fold\n",
+    "    X_fold_train_respeck, X_fold_val_respeck = X_combined_respeck[train_index], X_combined_respeck[val_index]\n",
+    "    X_fold_train_thingy, X_fold_val_thingy = X_combined_thingy[train_index], X_combined_thingy[val_index]\n",
+    "    y_fold_train_one_hot, y_fold_val_one_hot = y_combined_one_hot[train_index], y_combined_one_hot[val_index]\n",
+    "\n",
+    "    # Train the model\n",
+    "    model = build_dual_input_cnn_model(respeck_input_shape, thingy_input_shape, num_classes)  # Replace with your model-building function\n",
+    "    model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "    model.fit([X_fold_train_respeck, X_fold_train_thingy], y_fold_train_one_hot, epochs=10, batch_size=32, verbose=0)\n",
+    "\n",
+    "    # Validate on the fold validation set\n",
+    "    y_val_pred_probs = model.predict([X_fold_val_respeck, X_fold_val_thingy])\n",
+    "    y_val_pred_classes = np.argmax(y_val_pred_probs, axis=1)\n",
+    "    y_val_true_classes = np.argmax(y_fold_val_one_hot, axis=1)\n",
+    "\n",
+    "    # Calculate per-class accuracy for this fold\n",
+    "    per_class_accuracy = {}\n",
+    "    classes = np.unique(y_val_true_classes)\n",
+    "\n",
+    "    for cls in classes:\n",
+    "        # Get indices for the current class\n",
+    "        cls_indices = (y_val_true_classes == cls)\n",
+    "\n",
+    "        # Calculate class-specific accuracy\n",
+    "        cls_accuracy = np.mean((y_val_pred_classes == cls) == cls_indices)\n",
+    "        per_class_accuracy[cls] = cls_accuracy\n",
+    "\n",
+    "    # Append fold results\n",
+    "    fold_accuracies.append(per_class_accuracy)\n",
+    "\n",
+    "# Aggregate accuracies across folds\n",
+    "average_per_class_accuracy = {\n",
+    "    cls: np.mean([fold.get(cls, 0) for fold in fold_accuracies])\n",
+    "    for cls in np.unique(y_combined_one_hot.argmax(axis=1))\n",
+    "}\n",
+    "\n",
+    "print(\"Average per-class accuracy over k-fold:\")\n",
+    "for cls, acc in average_per_class_accuracy.items():\n",
+    "    print(f\"Class {cls}: {acc:.4f}\")"
    ]
   },
   {
